# dotenvage

./: .clippy.toml  .gitignore  .rust-toolchain.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NPM_PUBLISH_STATUS.md  README.md  build.rs  cog.toml  package.json  rustfmt.toml
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit
.claude/skills/commit/: SKILL.md
.claude/skills/release-prep/: SKILL.md
.claude/skills/testing/: SKILL.md
.claude/skills/version-bump/: SKILL.md
.githooks/: commit-msg  post-commit  pre-commit
.github/: CONTRIBUTING.md  MAINTAINERS.md  OIDC_SETUP.md  PUBLISH.md  dependabot.yml
.github/actions/: README.md
.github/workflows/: auto-version-bump.yml  ci.yml  publish.yml
examples/: get_variable_names.rs
npm/: README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml
npm/.next/: trace
npm/.next/cache/: config.json
npm/__tests__/: README.md  basic.test.js  env-loader.test.js  integration.test.js  secret-manager.test.js  test-utils.js
npm/dotenvage-napi/: Cargo.toml  build.rs
npm/dotenvage-napi/src/: lib.rs
npm/nextjs/: README.md  config.mjs  loader.mjs  preinit.mjs  wrapper.mjs
npm/scripts/: build-all.sh  get-current-target.sh
python/: README.md  pyproject.toml
python/dotenvage-pyo3/: Cargo.toml
python/dotenvage-pyo3/src/: lib.rs
python/tests/: __init__.py  test_basic.py  test_env_loader.py  test_secret_manager.py
scripts/: setup-dev.sh  sync-npm-version.sh
src/: error.rs  lib.rs  loader.rs  main.rs  manager.rs  patterns.rs
tests/: age_key_name.rs  dump_to_writer.rs  dynamic_recomputation.rs  get_all_variable_names.rs  loader_order.rs
