[package]
name = "dotenvage"
description = "Dotenv with age encryption: encrypt/decrypt secrets in .env files"
version = "0.0.3"
edition = "2024"
license = "MIT"
keywords = ["dotenv", "age", "encryption", "secrets", "cli"]
categories = ["cryptography", "config", "command-line-utilities"]
readme = "README.md"
authors = ["Jacobus Geluk <jacobus@agnos.ai>"]
repository = "https://github.com/agnos-ai/dotenvage"
documentation = "https://docs.rs/dotenvage"
homepage = "https://github.com/agnos-ai/dotenvage"

[lib]
name = "dotenvage"
path = "src/lib.rs"

[[bin]]
name = "dotenvage"
path = "src/main.rs"

[dependencies]
age = { version = "0.11.1", features = ["armor"] }
base64 = "0.22"
thiserror = "2.0"
anyhow = "1.0"
dotenvy = "0.15"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0.0"
tempfile = "3.15"

[dev-dependencies]
serial_test = "2.0"
assert_cmd = "2.1"
predicates = "3.1"
