[package]
name = "dotenvage"
description = "Dotenv with age encryption: encrypt/decrypt secrets in .env files"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["dotenv", "age", "encryption", "secrets", "cli"]
categories = ["cryptography", "config", "command-line-utilities"]
readme = "README.md"
authors = ["Jacobus Geluk <jacobus@agnos.ai>"]
repository = "https://github.com/agnos-ai/dotenvage"
documentation = "https://docs.rs/dotenvage"
homepage = "https://github.com/agnos-ai/dotenvage"

exclude = [
    ".cargo/",
    ".cargo-husky/",
    ".clippy.toml",
    ".cursor/",
    ".github/",
    ".gitignore",
    ".rust-toolchain.toml",
    ".vscode/",
    "CONTRIBUTING.md",
    "cog.toml",
    "rustfmt.toml",
    "scripts/",
]

[lib]
name = "dotenvage"
path = "src/lib.rs"

[[bin]]
name = "dotenvage"
path = "src/main.rs"

[dependencies]
age = { version = "0.11.1", features = ["armor"] }
base64 = "0.22"
thiserror = "2.0"
anyhow = "1.0"
dotenvy = "0.15"
clap = { version = "4.5.51", features = ["derive"] }
dirs = "6.0.0"
tempfile = "3.15"
serde_json = "1.0"

[dev-dependencies]
serial_test = "3.3.1"
assert_cmd = "2.1.1"
predicates = "3.1"
cargo-husky = { version = "1", default-features = false, features = [
    "user-hooks",
] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"
