[package]
name = "dotenvage"
description = "Dotenv with age encryption: encrypt/decrypt secrets in .env files"
version = "0.1.2"
edition = "2024"
license-file = "LICENSE"
keywords = ["dotenv", "age", "encryption", "secrets", "cli"]
categories = ["cryptography", "config", "command-line-utilities"]
readme = "README.md"
authors = ["Jacobus Geluk <jacobus@agnos.ai>"]
repository = "https://github.com/dataroadinc/dotenvage"
documentation = "https://docs.rs/dotenvage"
homepage = "https://github.com/dataroadinc/dotenvage"
rust-version = "1.92.0"
publish = true

exclude = [
    ".cargo/",
    ".cargo-husky/",
    ".clippy.toml",
    ".cursor/",
    ".github/",
    ".gitignore",
    ".rust-toolchain.toml",
    ".vscode/",
    "CONTRIBUTING.md",
    "cog.toml",
    "rustfmt.toml",
    "scripts/",
]

[lib]
name = "dotenvage"
path = "src/lib.rs"

[[bin]]
name = "dotenvage"
path = "src/main.rs"

[dependencies]
age = { version = "0.11.1", features = ["armor"] }
base64 = "0.22"
thiserror = "2.0"
anyhow = "1.0"
dotenvy = "0.15"
clap = { version = "4.5.51", features = ["derive"] }
dirs = "6.0.0"
tempfile = "3.15"
serde_json = "1.0"

[build-dependencies]
sloughi = "0.3"

[dev-dependencies]
serial_test = "3.3.1"
assert_cmd = "2.1.1"
predicates = "3.1"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"
