[package]
name = "dotenvage-napi"
version = "0.1.4"
edition = "2021"
license = "MIT"
authors = ["Jacobus Geluk <jacobus@dataroad.com>"]
repository = "https://github.com/dataroadinc/dotenvage"
description = "Node.js bindings for dotenvage using NAPI-RS"
rust-version = "1.92.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dotenvage = { path = "../../", version = "0.1.4" }
age = { version = "0.11.2", features = ["armor"] }
napi = { version = "3.5.1", default-features = false, features = [
    "napi6",
    "napi7",
    "serde-json",
] }
napi-derive = "3.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2.3.1"

[dev-dependencies]
napi = { version = "3.5.1", features = ["napi6", "napi7"] }
